--- a/SPW.DAL/App.Config
+++ b/SPW.DAL/App.Config
@@ -4,7 +4,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings><add name="SPWEntities" connectionString="metadata=res://*/SPW.csdl|res://*/SPW.ssdl|res://*/SPW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS2008R2;initial catalog=SPW;user id=sa;password=admin2000;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings><add name="SPWEntities" connectionString="metadata=res://*/SPW.csdl|res://*/SPW.ssdl|res://*/SPW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLSERVER2008R2;initial catalog=SPW;user id=sa;password=1234;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
