--- a/SPW.DataService/SPW.DataService.csproj
+++ b/SPW.DataService/SPW.DataService.csproj
@@ -48,6 +48,7 @@
     <Compile Include="CategoryService.cs" />
     <Compile Include="ColorService.cs" />
     <Compile Include="AccountMastService.cs" />
+    <Compile Include="EmpHistService.cs" />
     <Compile Include="EmpPositionService.cs" />
     <Compile Include="ReceiveRawTransService.cs" />
     <Compile Include="StockProductWithdrawService.cs" />
