--- a/SPW.Model/SPW.Model.csproj
+++ b/SPW.Model/SPW.Model.csproj
@@ -71,6 +71,7 @@
     <Compile Include="CustomModel\CATEGORY.cs" />
     <Compile Include="CustomModel\COLOR_TYPE.cs" />
     <Compile Include="CustomModel\COLOR.cs" />
+    <Compile Include="CustomModel\EMPLOYEE_HIST.cs" />
     <Compile Include="CustomModel\EMP_POSITION.cs" />
     <Compile Include="CustomModel\RECEIVE_RAW_TRANS.cs" />
     <Compile Include="CustomModel\STOCK_PRODUCT_WITHDRAW_TRANS.cs" />
