--- a/SPW.DataService/SPW.DataService.csproj
+++ b/SPW.DataService/SPW.DataService.csproj
@@ -48,6 +48,9 @@
     <Compile Include="CategoryService.cs" />
     <Compile Include="ColorService.cs" />
     <Compile Include="AccountMastService.cs" />
+    <Compile Include="EmpSkillTypeService.cs" />
+    <Compile Include="EmpSkillService.cs" />
+    <Compile Include="EmpGradeService.cs" />
     <Compile Include="EmpHistService.cs" />
     <Compile Include="EmpPositionService.cs" />
     <Compile Include="ReceiveRawTransService.cs" />
