--- a/SPW.UI.Web/SPW.UI.Web.csproj
+++ b/SPW.UI.Web/SPW.UI.Web.csproj
@@ -159,6 +159,8 @@
     <Content Include="JQuery\npm.js" />
     <Content Include="JQuery\sb-admin-2.js" />
     <Content Include="PageLogin\Login.aspx" />
+    <Content Include="Page\SearchHDTemplate.aspx" />
+    <Content Include="Page\ManageHDTemplate.aspx" />
     <Content Include="Page\ManageGrade.aspx" />
     <Content Include="Page\ManageEmpSkillType.aspx" />
     <Content Include="Page\SearchEmpSkillType.aspx" />
@@ -283,6 +285,20 @@
     </Compile>
     <Compile Include="PageLogin\Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page\SearchHDTemplate.aspx.cs">
+      <DependentUpon>SearchHDTemplate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page\SearchHDTemplate.aspx.designer.cs">
+      <DependentUpon>SearchHDTemplate.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page\ManageHDTemplate.aspx.cs">
+      <DependentUpon>ManageHDTemplate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page\ManageHDTemplate.aspx.designer.cs">
+      <DependentUpon>ManageHDTemplate.aspx</DependentUpon>
     </Compile>
     <Compile Include="Page\ManageGrade.aspx.cs">
       <DependentUpon>ManageGrade.aspx</DependentUpon>
