--- a/SPW.Model/SPW.Model.csproj
+++ b/SPW.Model/SPW.Model.csproj
@@ -72,6 +72,8 @@
     <Compile Include="CustomModel\COLOR_TYPE.cs" />
     <Compile Include="CustomModel\COLOR.cs" />
     <Compile Include="CustomModel\EMPLOYEE_HIST.cs" />
+    <Compile Include="CustomModel\EMP_MEASURE_DT_TEMPLATE.cs" />
+    <Compile Include="CustomModel\EMP_MEASURE_HD_TEMPLATE.cs" />
     <Compile Include="CustomModel\EMP_POSITION.cs" />
     <Compile Include="CustomModel\EMP_SKILL.cs" />
     <Compile Include="CustomModel\EMP_SKILL_TYPE.cs" />
