--- a/SPW.DataService/SPW.DataService.csproj
+++ b/SPW.DataService/SPW.DataService.csproj
@@ -48,8 +48,8 @@
     <Compile Include="CategoryService.cs" />
     <Compile Include="ColorService.cs" />
     <Compile Include="AccountMastService.cs" />
-    <Compile Include="EmpMeasureDtTemplate.cs" />
-    <Compile Include="EmpMeasureHdTemplate.cs" />
+    <Compile Include="EmpDtTemplateService.cs" />
+    <Compile Include="EmpHdTemplateService.cs" />
     <Compile Include="EmpSkillTypeService.cs" />
     <Compile Include="EmpSkillService.cs" />
     <Compile Include="EmpGradeService.cs" />
