--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\SPW.DAL\packages.config" />
   <repository path="..\SPW.Model\packages.config" />
+  <repository path="..\SPW.UI.Web\packages.config" />
 </repositories>
