--- a/SPW.DataService/SPW.DataService.csproj
+++ b/SPW.DataService/SPW.DataService.csproj
@@ -57,6 +57,7 @@
     <Compile Include="EmpPositionService.cs" />
     <Compile Include="ReceiveRawTransService.cs" />
     <Compile Include="StockProductWithdrawService.cs" />
+    <Compile Include="StockRawSettingService.cs" />
     <Compile Include="StockRawTransService.cs" />
     <Compile Include="SubFunctionService.cs" />
     <Compile Include="PoDtTransService.cs" />
