--- a/SPW.UI.Web/SPW.UI.Web.csproj
+++ b/SPW.UI.Web/SPW.UI.Web.csproj
@@ -245,6 +245,7 @@
     <Content Include="Page\SearchEmployee.aspx" />
     <Content Include="Page\StockIn.aspx" />
     <Content Include="Page\StockRaw.aspx" />
+    <Content Include="Page\StockRawSetting.aspx" />
     <Content Include="Reports\PayInSlipPaper.aspx" />
     <Content Include="Reports\PayInSummary.aspx" />
     <Content Include="Reports\PayInSlipKSBReport.aspx" />
@@ -898,6 +899,13 @@
     </Compile>
     <Compile Include="Page\StockRaw.aspx.designer.cs">
       <DependentUpon>StockRaw.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page\StockRawSetting.aspx.cs">
+      <DependentUpon>StockRawSetting.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page\StockRawSetting.aspx.designer.cs">
+      <DependentUpon>StockRawSetting.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reports\PayInSlipPaper.aspx.cs">
