--- a/SPW.DataService/SPW.DataService.csproj
+++ b/SPW.DataService/SPW.DataService.csproj
@@ -48,6 +48,8 @@
     <Compile Include="CategoryService.cs" />
     <Compile Include="ColorService.cs" />
     <Compile Include="AccountMastService.cs" />
+    <Compile Include="EmpMeasureTransService.cs" />
+    <Compile Include="EmpMeasureWeightService.cs" />
     <Compile Include="EmpDtTemplateService.cs" />
     <Compile Include="EmpHdTemplateService.cs" />
     <Compile Include="EmpSkillTypeService.cs" />
