--- a/SPW.DataService/SPW.DataService.csproj
+++ b/SPW.DataService/SPW.DataService.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ReceiveRawTransService.cs" />
     <Compile Include="StockProductWithdrawService.cs" />
     <Compile Include="StockRawLotService.cs" />
+    <Compile Include="StockRawSettingService.cs" />
     <Compile Include="StockRawTransService.cs" />
     <Compile Include="SubFunctionService.cs" />
     <Compile Include="PoDtTransService.cs" />
