--- a/SPW.UI.Web/SPW.UI.Web.csproj
+++ b/SPW.UI.Web/SPW.UI.Web.csproj
@@ -159,6 +159,8 @@
     <Content Include="JQuery\npm.js" />
     <Content Include="JQuery\sb-admin-2.js" />
     <Content Include="PageLogin\Login.aspx" />
+    <Content Include="Page\ResultEmpListAssessment.aspx" />
+    <Content Include="Page\SelectResultEmpAssessment.aspx" />
     <Content Include="Page\ResultEmpAssessment.aspx" />
     <Content Include="Page\SearchEmpResultAssessment.aspx" />
     <Content Include="Page\SearchEmployeeAssessment.aspx" />
@@ -251,6 +253,7 @@
     <Content Include="Page\StockIn.aspx" />
     <Content Include="Page\StockRaw.aspx" />
     <Content Include="Page\StockRawSetting.aspx" />
+    <Content Include="Reports\ResultEmpListAssessmentPageReport.aspx" />
     <Content Include="Reports\PayInSlipPaper.aspx" />
     <Content Include="Reports\PayInSummary.aspx" />
     <Content Include="Reports\PayInSlipKSBReport.aspx" />
@@ -291,6 +294,20 @@
     </Compile>
     <Compile Include="PageLogin\Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page\ResultEmpListAssessment.aspx.cs">
+      <DependentUpon>ResultEmpListAssessment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page\ResultEmpListAssessment.aspx.designer.cs">
+      <DependentUpon>ResultEmpListAssessment.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Page\SelectResultEmpAssessment.aspx.cs">
+      <DependentUpon>SelectResultEmpAssessment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Page\SelectResultEmpAssessment.aspx.designer.cs">
+      <DependentUpon>SelectResultEmpAssessment.aspx</DependentUpon>
     </Compile>
     <Compile Include="Page\ResultEmpAssessment.aspx.cs">
       <DependentUpon>ResultEmpAssessment.aspx</DependentUpon>
@@ -948,6 +965,13 @@
       <DependentUpon>StockRawSetting.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reports\ResultEmpListAssessmentPageReport.aspx.cs">
+      <DependentUpon>ResultEmpListAssessmentPageReport.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Reports\ResultEmpListAssessmentPageReport.aspx.designer.cs">
+      <DependentUpon>ResultEmpListAssessmentPageReport.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Reports\PayInSlipPaper.aspx.cs">
       <DependentUpon>PayInSlipPaper.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -1026,6 +1050,17 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>PayInSummaryReport.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reports\ResultEmpListAssessmentData.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ResultEmpListAssessmentData.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Reports\ResultEmpListAssessmentReport.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ResultEmpListAssessmentReport.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Reports\SaleVolume.aspx.cs">
@@ -1151,6 +1186,17 @@
     <Content Include="Reports\PayInSummaryData.xss">
       <DependentUpon>PayInSummaryData.xsd</DependentUpon>
     </Content>
+    <Content Include="Reports\ResultEmpListAssessmentData.xsc">
+      <DependentUpon>ResultEmpListAssessmentData.xsd</DependentUpon>
+    </Content>
+    <None Include="Reports\ResultEmpListAssessmentData.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>ResultEmpListAssessmentData.Designer.cs</LastGenOutput>
+    </None>
+    <Content Include="Reports\ResultEmpListAssessmentData.xss">
+      <DependentUpon>ResultEmpListAssessmentData.xsd</DependentUpon>
+    </Content>
     <None Include="Reports\SaleVolumeData.xsd">
       <SubType>Designer</SubType>
       <Generator>MSDataSetGenerator</Generator>
@@ -1224,6 +1270,10 @@
     <EmbeddedResource Include="Reports\PayInSummaryReport.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>PayInSummaryReport.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reports\ResultEmpListAssessmentReport.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>ResultEmpListAssessmentReport.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Reports\SaleVolumeReport.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
