--- a/SPW.UI.Web/SPW.UI.Web.csproj
+++ b/SPW.UI.Web/SPW.UI.Web.csproj
@@ -252,7 +252,7 @@
     <Content Include="Page\SearchEmployee.aspx" />
     <Content Include="Page\StockIn.aspx" />
     <Content Include="Page\StockRaw.aspx" />
-    <Content Include="Page\StockRawSetting.aspx" />
+    <Content Include="Page\StockRawLot.aspx" />
     <Content Include="Reports\ResultEmpListAssessmentPageReport.aspx" />
     <Content Include="Reports\PayInSlipPaper.aspx" />
     <Content Include="Reports\PayInSummary.aspx" />
@@ -957,12 +957,11 @@
     <Compile Include="Page\StockRaw.aspx.designer.cs">
       <DependentUpon>StockRaw.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Page\StockRawSetting.aspx.cs">
-      <DependentUpon>StockRawSetting.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
+    <Compile Include="Page\StockRawLot.aspx.cs">
+      <DependentUpon>StockRawLot.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Page\StockRawSetting.aspx.designer.cs">
-      <DependentUpon>StockRawSetting.aspx</DependentUpon>
+    <Compile Include="Page\StockRawLot.aspx.designer.cs">
+      <DependentUpon>StockRawLot.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reports\ResultEmpListAssessmentPageReport.aspx.cs">
