--- a/SPW.UI.Web/SPW.UI.Web.csproj
+++ b/SPW.UI.Web/SPW.UI.Web.csproj
@@ -316,6 +316,7 @@
     </Compile>
     <Compile Include="Page\SearchStockWithdrawExpose.aspx.cs">
       <DependentUpon>SearchStockWithdrawExpose.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Page\SearchStockWithdrawExpose.aspx.designer.cs">
       <DependentUpon>SearchStockWithdrawExpose.aspx</DependentUpon>
